--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tinyjs-cli",
   "enginName": "Tiny.js",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "Tiny.js 本地开发工具",
   "homepage": "http://www.tinyjs.net",
   "logo": "https://t.alipayobjects.com/images/rmsweb/T1nqFhXdJcXXXXXXXX.png",
@@ -10,7 +10,7 @@
     "email": "e@yufangjun.com"
   },
   "scripts": {
-    "lint": "eslint src test"
+    "lint": "eslint lib bin config"
   },
   "bin": {
     "tiny": "./bin/cli"
@@ -26,6 +26,8 @@
   "devDependencies": {
     "eslint": "~3.5.0",
     "eslint-config-standard": "~6.0.1",
+    "eslint-plugin-promise": "~3.4.0",
+    "eslint-plugin-standard": "~2.0.1",
     "mocha": "^2.2.5"
   },
   "dependencies": {
@@ -36,6 +38,9 @@
     "fs-extra": "^3.0.1",
     "glob": "~7.1.1",
     "inquirer": "^3.0.6",
+    "moment": "^2.19.2",
+    "node-localstorage": "^1.3.0",
+    "npm-whoami": "^1.1.4",
     "request": "^2.81.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.7",
