--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tinyjs-cli",
   "enginName": "Tiny.js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Tiny.js 本地开发工具",
   "homepage": "http://www.tinyjs.net",
   "logo": "https://t.alipayobjects.com/images/rmsweb/T1nqFhXdJcXXXXXXXX.png",
@@ -38,6 +38,7 @@
     "fs-extra": "^3.0.1",
     "glob": "~7.1.1",
     "inquirer": "^3.0.6",
+    "lodash": "^4.17.5",
     "moment": "^2.19.2",
     "node-localstorage": "^1.3.0",
     "npm-whoami": "^1.1.4",
