--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tinyjs-cli",
   "enginName": "Tiny.js",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Tiny.js 本地开发工具",
   "homepage": "http://www.tinyjs.net",
   "logo": "https://gw.alipayobjects.com/as/g/tiny/resources/1.0.0/images/logo.png",
@@ -31,14 +31,16 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
+    "basisu": "^1.2.1",
     "camelcase": "~3.0.0",
     "chalk": "^1.1.3",
     "co": "^4.6.0",
-    "commander": "^2.9.0",
+    "commander": "^7.1.0",
     "fs-extra": "^3.0.1",
     "glob": "~7.1.1",
+    "image-size": "^0.9.7",
     "inquirer": "^3.0.6",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.21",
     "moment": "^2.19.2",
     "node-localstorage": "^1.3.0",
     "npm-whoami": "^1.1.4",
