--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/ant-tinyjs/tinyjs-cli.git"
   },
   "publishConfig": {
-    "registry": "http://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org"
   },
   "license": "MIT",
   "devDependencies": {
